syntax = "proto3";

import "google/protobuf/empty.proto";

package atomix.cluster;

option java_package = "io.atomix.grpc.cluster";
option java_multiple_files = true;

// A cluster member
message Member {
    string id = 1;
    string host = 2;
    int32 port = 3;
    string zoneId = 4;
    string rackId = 5;
    string hostId = 6;
    map<string, string> properties = 7;
}

// Get members response
message GetMembersResponse {
    repeated Member members = 1;
}

// Get member request
message GetMemberRequest {
    string id = 1;
    string host = 2;
    int32 port = 3;
}

// Get member response
message GetMemberResponse {
    Member member = 1;
}

// Cluster membership event
message MemberEvent {
    Type type = 1;
    Member member = 2;

    enum Type {
        ADDED = 0;
        REMOVED = 1;
    }
}

// The cluster service
service Cluster {
    // Gets a list of members in the cluster
    rpc GetMembers(google.protobuf.Empty) returns (GetMembersResponse) {}

    // Gets a member
    rpc GetMember(GetMemberRequest) returns (GetMemberResponse) {}

    // Listens for events from the service
    rpc Listen(stream google.protobuf.Empty) returns (stream MemberEvent) {}
}